Fix nav icon z-index

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,6 +28,7 @@ body {
     position: relative;
     top: 15px;
     max-height: 30px;
+    z-index: 987;
 }
 
 .topnav div {
